Fixed line spacing

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -393,5 +393,8 @@ nav {
     color: #026c7c;
 }
 
+li {
+    margin-bottom: 20px;
+}
 
 
